--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 File Conversion Tools
 Jonathan Williams
 
-Codes for converting between different file types commonly used in the lab.
+Codes for converting between and processing different file types commonly used in the lab.
 
-Use 'make' to compile.  Requires g++ compiler and ROOT to be installed.  gf3 (radware) is recommended for viewing some file formats (.mca, etc.).
+Use 'make' to compile.  Requires g++ compiler and ROOT to be installed (some codes that do not depend on ROOT may be compiled using 'make no_root').  gf3 (radware) is recommended for viewing some file formats (.mca, etc.).
+
