--- a/README
+++ b/README
@@ -1,14 +1,22 @@
 File Conversion Tools
-Jonathan Williams
+Maintainer: Jonathan Williams
 
-Codes for converting between and processing different file types commonly used in the lab.
+
+DESCRIPTION
+
+Codes for converting between and processing different file types commonly used in the lab.  Yes, I know the code is extremely messy.  Contributions which help clean it up without breaking existing functionality are welcome.
+
+Running any code with no parameters will show a list of required parameters and/or parameter files.
+Some codes require parameter files to run.  Sample parameter files are included containing examples and listings of valid parameters.
+
+
+INSTRUCTIONS
 
 Use 'make' to compile.  Requires g++ compiler and CERN ROOT to be installed (codes that do not depend on ROOT may be compiled using 'make no_root').  gf3 (radwareS32K) is recommended for viewing .mca files, or the code mca2txt can be used to convert them to plaintext (for viewing in Excel, etc.).
 To make codes which depend on ROOT, the environment variable ROOTSYS must point to the location of root.  This can be done by adding to your .bashrc:
 export ROOTSYS=/path/to/root
 To run the programs from anywhere, move the resulting executables to any directory under your $PATH environment variable.
-Tested and working on Ubuntu 14.04 and Scientific Linux/CentOS 6.
+Tested using Ubuntu 14.04 and Scientific Linux/CentOS 6.  Should work on more or less any Linux distro.
 
-Running any code with no parameters will show a list of required parameters and/or parameter files.
-Some codes require parameter files to run.  Sample parameter files are included containing examples and listings of valid parameters.
+
 
